# WaveEquation

./: Example.py  README.md  pyproject.toml  setup.cfg  setup.py
Examples/: example.py  hexagon.py
WaveEquation/: PDESolver2d.py  __init__.py
examples/: example.py  hexagon.py
src/waveequation/: PDESolver2d.py  __init__.py
tests/: test_solver.py
