[metadata]
name = WaveEquation
version = attr: waveequation.__version__
description = Simple script that numerically solves the wave equation using finite difference methods.
author = Sam Hill
author_email = sam.j.hill@protonmail.com
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = physics, finite difference, wave

[options]
packages =
    waveequation
install_requires =
    numpy>=1.22
    matplotlib>=3.5

python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.1
    pytest-cov>=2.12
    tox>=3.24
    flake8>=5.0

[flake8]
ignore = E127, E226
max-line-length = 160

